// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filesPostProcessor adds file paths to makeDirs 1`] = `
Object {
  "dest": Object {
    "absolute": Object {
      "dist/file2.js": "<PROJECT_ROOT>/dist/file2.js",
      "file1.js": "<PROJECT_ROOT>/file1.js",
      "nested/inside/other.js": "<PROJECT_ROOT>/nested/inside/other.js",
    },
    "allowChanges": Object {
      "dist/file2.js": false,
      "file1.js": false,
      "nested/inside/other.js": false,
    },
    "files": Array [
      "dist/file2.js",
      "file1.js",
      "nested/inside/other.js",
    ],
    "hash": Object {
      "dist/file2.js": "",
      "file1.js": "971eb09e78cb5dca6dd4fba0284b996b624df850e0e27d2933280271d3a7b856",
      "nested/inside/other.js": "",
    },
    "ignoreUpdates": Object {
      "dist/file2.js": false,
      "file1.js": false,
      "nested/inside/other.js": false,
    },
  },
  "makeDirs": Array [
    "dist/static",
    "nested/inside",
    "src",
  ],
  "src": Object {
    "absolute": Object {
      "file1.js": "<PROJECT_ROOT>/file1.js",
      "nested/inside/other.js": "<PROJECT_ROOT>/nested/inside/other.js",
    },
    "files": Array [
      "file1.js",
      "file1.js",
      "nested/inside/other.js",
    ],
    "hash": Object {
      "file1.js": "971eb09e78cb5dca6dd4fba0284b996b624df850e0e27d2933280271d3a7b856",
      "nested/inside/other.js": "",
    },
  },
}
`;

exports[`filesPostProcessor do not skip files if directory does not match 1`] = `
Object {
  "dest": Object {
    "absolute": Object {
      "nested/inside/other.js": "<PROJECT_ROOT>/nested/inside/other.js",
    },
    "allowChanges": Object {
      "nested/inside/other.js": false,
    },
    "files": Array [
      "nested/inside/other.js",
    ],
    "hash": Object {
      "nested/inside/other.js": "",
    },
    "ignoreUpdates": Object {
      "nested/inside/other.js": false,
    },
  },
  "makeDirs": Array [
    "dist/static",
    "nested/inside",
    "src",
  ],
  "src": Object {
    "absolute": Object {
      "nested/inside/other.js": "<PROJECT_ROOT>/nested/inside/other.js",
    },
    "files": Array [
      "nested/inside/other.js",
    ],
    "hash": Object {
      "nested/inside/other.js": "",
    },
  },
}
`;

exports[`filesPostProcessor handles allowChangesAll 1`] = `
Object {
  "dest": Object {
    "absolute": Object {
      "file1.js": "<PROJECT_ROOT>/file1.js",
      "nested/inside.js": "<PROJECT_ROOT>/nested/inside.js",
      "nested/other.js": "<PROJECT_ROOT>/nested/other.js",
    },
    "allowChanges": Object {
      "file1.js": true,
      "nested/inside.js": true,
      "nested/other.js": true,
    },
    "files": Array [
      "file1.js",
      "nested/inside.js",
      "nested/other.js",
    ],
    "hash": Object {
      "file1.js": "971eb09e78cb5dca6dd4fba0284b996b624df850e0e27d2933280271d3a7b856",
      "nested/inside.js": "46234eada9c51bae5d7a671fbb939e6efd1dda8b524f2b8b015aa4bce7746c29",
      "nested/other.js": "44c09b273fa7e0ffcb87b76cf882a5c7cdeba79e80b8bc814d3909a2a58ad995",
    },
    "ignoreUpdates": Object {
      "file1.js": false,
      "nested/inside.js": false,
      "nested/other.js": false,
    },
  },
  "makeDirs": Array [
    "nested",
  ],
  "src": Object {
    "absolute": Object {
      "file1.js": "<PROJECT_ROOT>/file1.js",
      "nested/inside.js": "<PROJECT_ROOT>/nested/inside.js",
      "nested/other.js": "<PROJECT_ROOT>/nested/other.js",
    },
    "files": Array [
      "file1.js",
      "nested/inside.js",
      "nested/other.js",
    ],
    "hash": Object {
      "file1.js": "971eb09e78cb5dca6dd4fba0284b996b624df850e0e27d2933280271d3a7b856",
      "nested/inside.js": "46234eada9c51bae5d7a671fbb939e6efd1dda8b524f2b8b015aa4bce7746c29",
      "nested/other.js": "44c09b273fa7e0ffcb87b76cf882a5c7cdeba79e80b8bc814d3909a2a58ad995",
    },
  },
}
`;

exports[`filesPostProcessor handles ignoreUpdatesAll 1`] = `
Object {
  "dest": Object {
    "absolute": Object {
      "file1.js": "<PROJECT_ROOT>/file1.js",
      "nested/inside.js": "<PROJECT_ROOT>/nested/inside.js",
      "nested/other.js": "<PROJECT_ROOT>/nested/other.js",
    },
    "allowChanges": Object {
      "file1.js": true,
      "nested/inside.js": true,
      "nested/other.js": true,
    },
    "files": Array [
      "file1.js",
      "nested/inside.js",
      "nested/other.js",
    ],
    "hash": Object {
      "file1.js": "971eb09e78cb5dca6dd4fba0284b996b624df850e0e27d2933280271d3a7b856",
      "nested/inside.js": "46234eada9c51bae5d7a671fbb939e6efd1dda8b524f2b8b015aa4bce7746c29",
      "nested/other.js": "44c09b273fa7e0ffcb87b76cf882a5c7cdeba79e80b8bc814d3909a2a58ad995",
    },
    "ignoreUpdates": Object {
      "file1.js": true,
      "nested/inside.js": true,
      "nested/other.js": true,
    },
  },
  "makeDirs": Array [
    "nested",
  ],
  "src": Object {
    "absolute": Object {
      "file1.js": "<PROJECT_ROOT>/file1.js",
      "nested/inside.js": "<PROJECT_ROOT>/nested/inside.js",
      "nested/other.js": "<PROJECT_ROOT>/nested/other.js",
    },
    "files": Array [
      "file1.js",
      "nested/inside.js",
      "nested/other.js",
    ],
    "hash": Object {
      "file1.js": "971eb09e78cb5dca6dd4fba0284b996b624df850e0e27d2933280271d3a7b856",
      "nested/inside.js": "46234eada9c51bae5d7a671fbb939e6efd1dda8b524f2b8b015aa4bce7746c29",
      "nested/other.js": "44c09b273fa7e0ffcb87b76cf882a5c7cdeba79e80b8bc814d3909a2a58ad995",
    },
  },
}
`;

exports[`filesPostProcessor handles makeDirs 1`] = `
Object {
  "dest": Object {
    "absolute": Object {},
    "allowChanges": Object {},
    "files": Array [],
    "hash": Object {},
    "ignoreUpdates": Object {},
  },
  "makeDirs": Array [
    "dist/other/nested",
    "dist/static",
    "src",
    "static",
  ],
  "src": Object {
    "absolute": Object {},
    "files": Array [],
    "hash": Object {},
  },
}
`;

exports[`filesPostProcessor handles options 1`] = `
Object {
  "dest": Object {
    "absolute": Object {
      "nested/inside.js": "<PROJECT_ROOT>/nested/inside.js",
      "nested/other.js": "<PROJECT_ROOT>/nested/other.js",
      "z-file2.js": "<PROJECT_ROOT>/z-file2.js",
    },
    "allowChanges": Object {
      "nested/inside.js": true,
      "nested/other.js": false,
      "z-file2.js": true,
    },
    "files": Array [
      "nested/inside.js",
      "nested/other.js",
      "z-file2.js",
    ],
    "hash": Object {
      "nested/inside.js": "46234eada9c51bae5d7a671fbb939e6efd1dda8b524f2b8b015aa4bce7746c29",
      "nested/other.js": "44c09b273fa7e0ffcb87b76cf882a5c7cdeba79e80b8bc814d3909a2a58ad995",
      "z-file2.js": "447ad688b0d3b7449000199a9e766ee03965da1ab15a961756a90dcff3a810e3",
    },
    "ignoreUpdates": Object {
      "nested/inside.js": false,
      "nested/other.js": false,
      "z-file2.js": false,
    },
  },
  "makeDirs": Array [
    "nested",
  ],
  "src": Object {
    "absolute": Object {
      "nested/inside.js": "<PROJECT_ROOT>/nested/inside.js",
      "nested/other.js": "<PROJECT_ROOT>/nested/other.js",
      "z-file2.js": "<PROJECT_ROOT>/z-file2.js",
    },
    "files": Array [
      "nested/inside.js",
      "nested/other.js",
      "z-file2.js",
    ],
    "hash": Object {
      "nested/inside.js": "46234eada9c51bae5d7a671fbb939e6efd1dda8b524f2b8b015aa4bce7746c29",
      "nested/other.js": "44c09b273fa7e0ffcb87b76cf882a5c7cdeba79e80b8bc814d3909a2a58ad995",
      "z-file2.js": "447ad688b0d3b7449000199a9e766ee03965da1ab15a961756a90dcff3a810e3",
    },
  },
}
`;

exports[`filesPostProcessor handles single options 1`] = `
Object {
  "dest": Object {
    "absolute": Object {
      "ignore-updates-1.js": "<PROJECT_ROOT>/ignore-updates-1.js",
      "ignore-updates-2.js": "<PROJECT_ROOT>/ignore-updates-2.js",
      "nested/inside.js": "<PROJECT_ROOT>/nested/inside.js",
      "nested/other.js": "<PROJECT_ROOT>/nested/other.js",
      "z-file2.js": "<PROJECT_ROOT>/z-file2.js",
    },
    "allowChanges": Object {
      "ignore-updates-1.js": true,
      "ignore-updates-2.js": true,
      "nested/inside.js": true,
      "nested/other.js": false,
      "z-file2.js": true,
    },
    "files": Array [
      "nested/inside.js",
      "nested/other.js",
      "ignore-updates-1.js",
      "ignore-updates-2.js",
      "z-file2.js",
    ],
    "hash": Object {
      "ignore-updates-1.js": "",
      "ignore-updates-2.js": "",
      "nested/inside.js": "46234eada9c51bae5d7a671fbb939e6efd1dda8b524f2b8b015aa4bce7746c29",
      "nested/other.js": "44c09b273fa7e0ffcb87b76cf882a5c7cdeba79e80b8bc814d3909a2a58ad995",
      "z-file2.js": "447ad688b0d3b7449000199a9e766ee03965da1ab15a961756a90dcff3a810e3",
    },
    "ignoreUpdates": Object {
      "ignore-updates-1.js": true,
      "ignore-updates-2.js": true,
      "nested/inside.js": false,
      "nested/other.js": false,
      "z-file2.js": false,
    },
  },
  "makeDirs": Array [
    "nested",
  ],
  "src": Object {
    "absolute": Object {
      "nested/ignore-updates-1.js": "<PROJECT_ROOT>/nested/ignore-updates-1.js",
      "nested/ignore-updates-2.js": "<PROJECT_ROOT>/nested/ignore-updates-2.js",
      "nested/inside.js": "<PROJECT_ROOT>/nested/inside.js",
      "nested/other.js": "<PROJECT_ROOT>/nested/other.js",
      "z-file2.js": "<PROJECT_ROOT>/z-file2.js",
    },
    "files": Array [
      "nested/inside.js",
      "nested/other.js",
      "nested/ignore-updates-1.js",
      "nested/ignore-updates-2.js",
      "z-file2.js",
    ],
    "hash": Object {
      "nested/ignore-updates-1.js": "",
      "nested/ignore-updates-2.js": "",
      "nested/inside.js": "46234eada9c51bae5d7a671fbb939e6efd1dda8b524f2b8b015aa4bce7746c29",
      "nested/other.js": "44c09b273fa7e0ffcb87b76cf882a5c7cdeba79e80b8bc814d3909a2a58ad995",
      "z-file2.js": "447ad688b0d3b7449000199a9e766ee03965da1ab15a961756a90dcff3a810e3",
    },
  },
}
`;

exports[`filesPostProcessor handles undefined 1`] = `
Object {
  "dest": Object {
    "absolute": Object {},
    "allowChanges": Object {},
    "files": Array [],
    "hash": Object {},
    "ignoreUpdates": Object {},
  },
  "makeDirs": Array [],
  "src": Object {
    "absolute": Object {},
    "files": Array [],
    "hash": Object {},
  },
}
`;

exports[`filesPostProcessor makeDirs normalizes paths 1`] = `
Object {
  "dest": Object {
    "absolute": Object {},
    "allowChanges": Object {},
    "files": Array [],
    "hash": Object {},
    "ignoreUpdates": Object {},
  },
  "makeDirs": Array [
    "src",
  ],
  "src": Object {
    "absolute": Object {},
    "files": Array [],
    "hash": Object {},
  },
}
`;

exports[`filesPostProcessor makeDirs skip remove last tree when both are specified 1`] = `
Object {
  "dest": Object {
    "absolute": Object {},
    "allowChanges": Object {},
    "files": Array [],
    "hash": Object {},
    "ignoreUpdates": Object {},
  },
  "makeDirs": Array [
    "dist",
    "src",
  ],
  "src": Object {
    "absolute": Object {},
    "files": Array [],
    "hash": Object {},
  },
}
`;

exports[`filesPostProcessor makeDirs skip remove whole tree when base specified 1`] = `
Object {
  "dest": Object {
    "absolute": Object {},
    "allowChanges": Object {},
    "files": Array [],
    "hash": Object {},
    "ignoreUpdates": Object {},
  },
  "makeDirs": Array [
    "src",
  ],
  "src": Object {
    "absolute": Object {},
    "files": Array [],
    "hash": Object {},
  },
}
`;

exports[`filesPostProcessor removes duplicate makeDirs 1`] = `
Object {
  "dest": Object {
    "absolute": Object {},
    "allowChanges": Object {},
    "files": Array [],
    "hash": Object {},
    "ignoreUpdates": Object {},
  },
  "makeDirs": Array [
    "dist",
    "src",
  ],
  "src": Object {
    "absolute": Object {},
    "files": Array [],
    "hash": Object {},
  },
}
`;

exports[`filesPostProcessor removes duplicate makeDirs with exact path 1`] = `
Object {
  "dest": Object {
    "absolute": Object {},
    "allowChanges": Object {},
    "files": Array [],
    "hash": Object {},
    "ignoreUpdates": Object {},
  },
  "makeDirs": Array [
    "dist",
    "src",
  ],
  "src": Object {
    "absolute": Object {},
    "files": Array [],
    "hash": Object {},
  },
}
`;

exports[`filesPostProcessor returns empty hash when file does not exist 1`] = `
Object {
  "dest": Object {
    "absolute": Object {
      "file1.js": "<PROJECT_ROOT>/file1.js",
      "missing.js": "<PROJECT_ROOT>/missing.js",
      "nested/missing.js": "<PROJECT_ROOT>/nested/missing.js",
      "nested/other.js": "<PROJECT_ROOT>/nested/other.js",
    },
    "allowChanges": Object {
      "file1.js": false,
      "missing.js": false,
      "nested/missing.js": false,
      "nested/other.js": false,
    },
    "files": Array [
      "nested/other.js",
      "nested/missing.js",
      "missing.js",
      "file1.js",
    ],
    "hash": Object {
      "file1.js": "971eb09e78cb5dca6dd4fba0284b996b624df850e0e27d2933280271d3a7b856",
      "missing.js": "",
      "nested/missing.js": "",
      "nested/other.js": "44c09b273fa7e0ffcb87b76cf882a5c7cdeba79e80b8bc814d3909a2a58ad995",
    },
    "ignoreUpdates": Object {
      "file1.js": false,
      "missing.js": false,
      "nested/missing.js": false,
      "nested/other.js": false,
    },
  },
  "makeDirs": Array [
    "nested",
  ],
  "src": Object {
    "absolute": Object {
      "file1.js": "<PROJECT_ROOT>/file1.js",
      "missing.js": "<PROJECT_ROOT>/missing.js",
      "nested/inside.js": "<PROJECT_ROOT>/nested/inside.js",
      "nested/missing.js": "<PROJECT_ROOT>/nested/missing.js",
    },
    "files": Array [
      "nested/missing.js",
      "nested/inside.js",
      "missing.js",
      "file1.js",
    ],
    "hash": Object {
      "file1.js": "971eb09e78cb5dca6dd4fba0284b996b624df850e0e27d2933280271d3a7b856",
      "missing.js": "",
      "nested/inside.js": "46234eada9c51bae5d7a671fbb939e6efd1dda8b524f2b8b015aa4bce7746c29",
      "nested/missing.js": "",
    },
  },
}
`;

exports[`filesPostProcessor returns new object 1`] = `
Object {
  "dest": Object {
    "absolute": Object {
      "file1.js": "<PROJECT_ROOT>/file1.js",
      "nested/inside.js": "<PROJECT_ROOT>/nested/inside.js",
      "nested/other.js": "<PROJECT_ROOT>/nested/other.js",
      "z-file2.js": "<PROJECT_ROOT>/z-file2.js",
    },
    "allowChanges": Object {
      "file1.js": false,
      "nested/inside.js": false,
      "nested/other.js": false,
      "z-file2.js": false,
    },
    "files": Array [
      "nested/other.js",
      "nested/inside.js",
      "z-file2.js",
      "file1.js",
    ],
    "hash": Object {
      "file1.js": "971eb09e78cb5dca6dd4fba0284b996b624df850e0e27d2933280271d3a7b856",
      "nested/inside.js": "46234eada9c51bae5d7a671fbb939e6efd1dda8b524f2b8b015aa4bce7746c29",
      "nested/other.js": "44c09b273fa7e0ffcb87b76cf882a5c7cdeba79e80b8bc814d3909a2a58ad995",
      "z-file2.js": "447ad688b0d3b7449000199a9e766ee03965da1ab15a961756a90dcff3a810e3",
    },
    "ignoreUpdates": Object {
      "file1.js": false,
      "nested/inside.js": false,
      "nested/other.js": false,
      "z-file2.js": false,
    },
  },
  "makeDirs": Array [
    "nested",
  ],
  "src": Object {
    "absolute": Object {
      "file1.js": "<PROJECT_ROOT>/file1.js",
      "nested/inside.js": "<PROJECT_ROOT>/nested/inside.js",
      "nested/other.js": "<PROJECT_ROOT>/nested/other.js",
      "z-file2.js": "<PROJECT_ROOT>/z-file2.js",
    },
    "files": Array [
      "nested/other.js",
      "nested/inside.js",
      "z-file2.js",
      "file1.js",
    ],
    "hash": Object {
      "file1.js": "971eb09e78cb5dca6dd4fba0284b996b624df850e0e27d2933280271d3a7b856",
      "nested/inside.js": "46234eada9c51bae5d7a671fbb939e6efd1dda8b524f2b8b015aa4bce7746c29",
      "nested/other.js": "44c09b273fa7e0ffcb87b76cf882a5c7cdeba79e80b8bc814d3909a2a58ad995",
      "z-file2.js": "447ad688b0d3b7449000199a9e766ee03965da1ab15a961756a90dcff3a810e3",
    },
  },
}
`;

exports[`filesPostProcessor skip files if inside skipped dir 1`] = `
Object {
  "dest": Object {
    "absolute": Object {},
    "allowChanges": Object {},
    "files": Array [],
    "hash": Object {},
    "ignoreUpdates": Object {},
  },
  "makeDirs": Array [
    "dist/static",
    "src",
  ],
  "src": Object {
    "absolute": Object {},
    "files": Array [],
    "hash": Object {},
  },
}
`;

exports[`filesPostProcessor skip works with makeDirs 1`] = `
Object {
  "dest": Object {
    "absolute": Object {},
    "allowChanges": Object {},
    "files": Array [],
    "hash": Object {},
    "ignoreUpdates": Object {},
  },
  "makeDirs": Array [
    "static",
  ],
  "src": Object {
    "absolute": Object {},
    "files": Array [],
    "hash": Object {},
  },
}
`;
